Crud Space Type
