# engines/gallery/app/models/gallery/space_type.rb
@@ -1,0 +1,4 @@
+module Gallery
+  class SpaceType < ApplicationRecord
+  end
+end
