# engines/gallery/app/serializers/gallery/v1/space_type_serializer.rb
@@ -1,0 +1,9 @@
+module Gallery
+    module V1
+        class SpaceTypeSerializer < ActiveModel::Serializer
+            attributes :id,
+                       :title, 
+                       :description 
+        end
+    end
+end
